fix: adjust padding and position for h1 and icon for better alignment

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   }
 
   h1 {
-    padding: 30px 0 20px 26px;
+    padding: 20px 0 20px 26px;
     color: #5f9341;
     position: relative;
   }
@@ -17,7 +17,7 @@ body {
     position: absolute;
     width: 24px;
     height: 24px;
-    top: 36px;
+    top: 26px;
     left: 0px;
     background-size: cover;
   }
